gap fix

--- a/styles/editor.css
+++ b/styles/editor.css
@@ -165,3 +165,6 @@ blockquote {
   background-color: #e0e0e0;
   color: #111;
 }
+.ProseMirror p {
+  margin: 0;
+}
